--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,8 @@
 		<title>Aitor</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+		<a href="/about/">About</a>
 		<h1>Aitor</h1>
 	</body>
 </html>
