--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro';
 ---
 <html lang="en">
   <head>
@@ -18,5 +19,7 @@
       <li><a href="/posts/post-2/">Post 2</a></li>
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
+    
+    <Footer />
   </body>
 </html>
