--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+import Hamburguer from '../components/Hamburguer.astro';
+const pageTitle = 'Home Page';
 
 ---
 
@@ -8,11 +12,13 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Aitor</title>
+    	<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<h1>Aitor</h1>
+		<Hamburguer />
+		<Navigation />
+    	<h1>{pageTitle}</h1>
+		<Footer />
+		<script> import "../scripts/menu.js"; </script>
 	</body>
 </html>
